--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,8 @@ button {
   width: 100%;
   height: 80px;
   padding: 0px 0px;
+  position: fixed;
+  top: 0;
 }
 
 .headerimage {
@@ -72,6 +74,10 @@ button {
   font-size: 48px;
   font-weight: 900;
   transform: scale(1, 0.65);
+}
+
+.main {
+  margin-top: 80px;
 }
 
 .homecontent {
